changing to rus in settings

--- a/FFH_Team_M_M/Instructions_1.html
+++ b/FFH_Team_M_M/Instructions_1.html
@@ -4,7 +4,7 @@
 
 
     <p>
-        По окончанию эксперимента Вы получите плату как за сам факт участия,
+        По окончании эксперимента Вы получите плату как за сам факт участия,
         так и плату, зависящую от результатов самой игры.
 
         Плата за участие одинакова для всех, в то время как
@@ -23,19 +23,19 @@
         (Experimental Currency Unit - Экспериментальных денежных единиц).
 
         Ваш индивидуальный результат зависит только от Вас и определяется
-        Вашими сосбственными действиями:
-        Вам необходимо подробросить игральную кость (с шестью гранями)
+        Вашими собственными действиями:
+        Вам необходимо подбросить игральную кость (с шестью гранями)
         и ввести выпавшее число на грани в окошко формы.<br>
     </p>
     <p>
         При этом, если Вам выпадет число от 1 до 5,
         то Ваша начальная сумма умножается на выпавшее число.
-        Если же Вам выпало 6, то начальная сумма умножается на 0 (См. таблицу ниже) <br>
+        Если же Вам выпало 6, то начальная сумма умножается на 0 (См. таблицу ниже). <br>
     </p>
 
     <p>
         Ваш финальный результат определяется следующим образом:
-        Ваш индивидуальные результат в игре сумируется с реузльатом в игре участника,
+        Ваш индивидуальные результат в игре сумируется с результатом в игре участника,
         находящегося с Вами в паре, и делится поровну между каждым из Вас.
     </p>
 
