--- a/FFH_Team_No_Info/Instructions_1.html
+++ b/FFH_Team_No_Info/Instructions_1.html
@@ -4,7 +4,7 @@
 
 
     <p>
-        По окончанию эксперимента Вы получите плату как за сам факт участия,
+        По окончании эксперимента Вы получите плату как за сам факт участия,
         так и плату, зависящую от результатов самой игры.
 
         Плата за участие одинакова для всех, в то время как
@@ -23,8 +23,8 @@
         (Experimental Currency Unit - Экспериментальных денежных единиц).
 
         Ваш индивидуальный результат зависит только от Вас и определяется
-        Вашими сосбственными действиями:
-        Вам необходимо подробросить игральную кость (с шестью гранями)
+        Вашими собственными действиями:
+        Вам необходимо подбросить игральную кость (с шестью гранями)
         и ввести выпавшее число на грани в окошко формы.<br>
     </p>
     <p>
